--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,7 @@
   "dependencies": {
     "jquery": "~1.11.1",
     "_normalize.scss": "~2.1.3",
-    "sheetsee": "~1.0.0",
-    "tabletop": ">= 1.3.5"
+    "tabletop": ">= 1.3.5",
+    "handlebars": "~2.0.0"
   }
 }
